--- a/Bloque 1/Examen/notebook_funcion.ipynb
+++ b/Bloque 1/Examen/notebook_funcion.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ejercicio Notebook Función"
+    "# Ejercicio examen"
    ]
   },
   {
@@ -16,12 +16,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
+    "import statistics\n",
     "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bucle_condicional.py  ejercicio_note_funcion_resuelto.ipynb  Palabras.ipynb\r\n",
+      "Calculadora.py        notebook_funcion.ipynb\r\n",
+      "Cesar.ipynb           \u001b[0m\u001b[01;34motros\u001b[0m/\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
    ]
   },
   {
@@ -42,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$y = \\frac{\\overline{x}}{max}$"
+    "$y = \\frac{median}{mode}$"
    ]
   },
   {
@@ -50,13 +72,13 @@
    "metadata": {},
    "source": [
     "y = variable de salida <br/>\n",
-    "$\\overline{x}$ = Media <br/>\n",
+    "median = mediana de la muestra <br/>\n",
     "max = valor máximo de la muestra <br/>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,12 +94,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "lista_numeros = []\n",
-    "with open('./lista_numeros.txt') as csv_file:\n",
+    "with open('./otros/lista_numeros.txt') as csv_file:\n",
     "    csv_reader = csv.reader(csv_file, delimiter='\\n')\n",
     "    for row in csv_reader:\n",
     "        lista_numeros.append(int(row[0]))"
@@ -94,17 +116,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Llama a la función y usa como datos de entrata la variable ***\"lista_numeros\"*** asigna el valor resultante a una variable llamada \"y\""
+    "Asigna el valor resultante a una variable llamada \"y\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#en esta celda llama a la función y asignale su valor a y\n",
-    "y = None"
+    "y ="
    ]
   },
   {
@@ -130,27 +151,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pega este resultado en forms hasta el tercer decimal, milésimas, sin redondear: 0.5608863605244182\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Pega este resultado en forms hasta el tercer decimal, milésimas, sin redondear: \" + str(math.ldexp(y, 1)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -169,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
