--- a/Bloque 1/Examen/Palabras.ipynb
+++ b/Bloque 1/Examen/Palabras.ipynb
@@ -7,14 +7,14 @@
     "# Pregunta 9 \n",
     "\n",
     "#### En este ejercicio debes usar un módulo que nunca hemos usado, entenderlo, y utilizar 2 funciones del mismo que te ayudarán a  listar las tres palabras que más aparecen en una lista. Tienes que conseguir que al llamar a estas funciones el resultado de la misma tenga un formato similar a\n",
-    "[('PEDRO', 24), ('JUAN', 14), ('PACO', 5)]\n",
+    "[('PEDRO', 24), ('JUAN', 14), ('PACO', 5), ('LUIS', 2)]\n",
     "#### No es dificil si lees detenidamente la documentación de este módulo.\n",
     "### Disfruta del ejercicio!!!!\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,7 @@
     "XXXXXXXXXXP=0\n",
     "XXXXXXXXXXZ=1\n",
     "XXXXXXXXXXC=2\n",
+    "XXXXXXXXXXD=3\n",
     "import math\n",
     "# NO TOCAR FIN\n",
     "\n",
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,14 +89,12 @@
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "#<<<<<<<<<<<---FINALIZAINTRODUCE TO CÓDIGO AQUI->>>>>>>>>>>>>>>>>>>>>>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,13 +109,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "##### \n",
     "############ VERIFICADOR DEL EJERCICIO ############################\n",
-    "math.expm1(mas_comunes[XXXXXXXXXXP][1]/mas_comunes[XXXXXXXXXXC][1])+mas_comunes[XXXXXXXXXXZ][1]\n",
+    "math.expm1(mas_comunes[XXXXXXXXXXP][1]/mas_comunes[XXXXXXXXXXC][1])+mas_comunes[XXXXXXXXXXZ][1] -mas_comunes[XXXXXXXXXXD][1]\n",
     "\n",
     "##### INTRODUCIR EN EL FORMULARIO DEL EXAMEN EL VALOR QUE APARECE AL EJECUTAR ESTA CELDA PERO\n",
     "##### SOLO CON 3 DIGITOS DECIMALES\n",
@@ -152,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
