--- a/Bloque 1/Examen/Cesar.ipynb
+++ b/Bloque 1/Examen/Cesar.ipynb
@@ -22,18 +22,28 @@
     "# Para buscar la primera vez que aparece un caracter en una lista de caracteres se usa:\n",
     "#     variable.find(caracter_buscado,posición_desde_la_que_buscar,posición_hasta_la_que_buscar)\n",
     "# Para obtener una posición en concreto de una cadena de caracteresa se usa\n",
-    "#     variable[posicion]\n"
+    "#     variable[posicion]\n",
+    "\n",
+    "# In this exercise you will have to decipher a phrase that has been encrypted with \"The displacement of Cesar\"\n",
+    "# Browse the internet, understand how it works and try to implement the \"decrypt_cesar\" function that you receive as\n",
+    "# parameters the passphrase and the offset value\n",
+    "\n",
+    "# HELP:\n",
+    "# To find the first time a character appears in a character list use:\n",
+    "# variable.find (search_character, position_from_search, position_to_search)\n",
+    "# To obtain a specific position of a character string, use\n",
+    "# variable [position]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "frase_cifrada='WXF RB KNCCNA CQJW WNENA. ZDN EREJ UJ NBLDNUJ MN JWJUÍCRLJ!!!' ## <-----NO TOCAR\n",
-    "desplazamiento=     ## <------ Tienes que cambiar este valor y poner el que entiendas que es el correcto\n",
-    "alfabeto='ABCDEFGHIJKLMNOPQRSTUVWXYZ' ## <------NO TOCAR"
+    "frase_cifrada='MUXQMHI CV VCMDW KIUQVW XIZI TI ICLQBWZQI' ## <-----NO TOCAR DO NOT TOUCH\n",
+    "desplazamiento=     ## <------ Tienes que cambiar este valor y poner el que entiendas que es el correcto You have to change this value and put the one that you understand is correct\n",
+    "alfabeto='ABCDEFGHIJKLMNOPQRSTUVWXYZ' ## <------NO TOCAR DO NOT TOUCH"
    ]
   },
   {
@@ -44,12 +54,13 @@
    "source": [
     "def descifrar_cesar(frase,desplazamiento):\n",
     "## <<<<<<<INTRODUCE AQUI TU CÓDIGO DE FUNCIÓN >>>>>>>>\n",
+    "## <<<<<<< ENTER YOUR FUNCTION CODE HERE >>>>>>>>\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "\n",
-    "## <<<<<<<FNIAL INTRODUCE AQUI TU CÓDIGO DE FUNCIÓN >>>>>>>>"
+    "## <<<<<<<FNIAL INTRODUCE AQUI TU CÓDIGO DE FUNCIÓN >>>>>>>>\n",
+    "## <<<<<<< FNIAL ENTER YOUR FUNCTION CODE HERE >>>>>>>>"
    ]
   },
   {
@@ -59,6 +70,7 @@
    "outputs": [],
    "source": [
     "#### <<<<<------NO TOCAR------->>>>>>>\n",
+    "#### <<<<< ------ DO NOT TOUCH ------- >>>>>>>\n",
     "descifrar_cesar(frase_cifrada,desplazamiento)"
    ]
   },
@@ -75,7 +87,16 @@
     "#\n",
     "# TEN EN CUENTA QUE LA FRASE DESCIFRADA ES UN TEXTO TOTALMENTE LEGIBLE\n",
     "# \n",
-    "# ############################# ATENCIÓN ##############################"
+    "# ############################# ATENCIÓN ##############################\n",
+    "\n",
+    "# Pastes in the exam exactly the decrypted text that results from executing the previous cell\n",
+    "# Verify that there are no spaces in front or behind\n",
+    "#\n",
+    "# ############################# ATTENTION ################### ###########\n",
+    "#\n",
+    "# PLEASE NOTE THAT THE SCRIPTED PHRASE IS A TOTALLY READABLE TEXT\n",
+    "#\n",
+    "# ############################# ATTENTION ################### ###########"
    ]
   }
  ],
@@ -95,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
