--- a/Bloque 1/Sesion 4/Ejemplos/Jupyter/ej10_final.ipynb
+++ b/Bloque 1/Sesion 4/Ejemplos/Jupyter/ej10_final.ipynb
@@ -65,11 +65,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "valor_maximo_control = 30000"
+    "valor_maximo_control = 20000"
    ]
   },
   {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -97,9 +97,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ejemplo_3_cabeceras.ipynb       ejemplo_6_imagenes_correo.ipynb  prueba.py\r\n",
-      "Ejemplo_3_hipervinculos.ipynb   Ejemplo_final_9.ipynb\r\n",
-      "Ejemplo_5_negrita_listas.ipynb  ejercicio_final.ipynb\r\n"
+      "lista_numeros.txt\r\n"
      ]
     }
    ],
@@ -109,19 +107,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jovyan\n"
+      "/home/jovyan/Bloque 1/Sesion 4/otros\n"
      ]
     }
    ],
    "source": [
-    "cd .."
+    "cd otros"
    ]
   },
   {
@@ -149,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,94 +173,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[5,\n",
-       " 12,\n",
-       " 20,\n",
-       " 23,\n",
-       " 35,\n",
-       " 46,\n",
-       " 85,\n",
-       " 98,\n",
-       " 153,\n",
-       " 206,\n",
-       " 206,\n",
-       " 238,\n",
-       " 315,\n",
-       " 328,\n",
-       " 359,\n",
-       " 519,\n",
-       " 519,\n",
-       " 10820,\n",
-       " 11701,\n",
-       " 12272,\n",
-       " 12672,\n",
-       " 12777,\n",
-       " 12777,\n",
-       " 13009,\n",
-       " 13560,\n",
-       " 14280,\n",
-       " 14712,\n",
-       " 15392,\n",
-       " 15437,\n",
-       " 17760,\n",
-       " 18488,\n",
-       " 20309,\n",
-       " 558,\n",
-       " 558,\n",
-       " 558,\n",
-       " 558,\n",
-       " 647,\n",
-       " 660,\n",
-       " 1428,\n",
-       " 1428,\n",
-       " 1539,\n",
-       " 1539,\n",
-       " 1619,\n",
-       " 1619,\n",
-       " 2145,\n",
-       " 2145,\n",
-       " 2257,\n",
-       " 2931,\n",
-       " 3724,\n",
-       " 3724,\n",
-       " 3724,\n",
-       " 4211,\n",
-       " 4215,\n",
-       " 4345,\n",
-       " 4561,\n",
-       " 5254,\n",
-       " 5254,\n",
-       " 6221,\n",
-       " 6240,\n",
-       " 6280,\n",
-       " 7111,\n",
-       " 8004,\n",
-       " 8132,\n",
-       " 8132,\n",
-       " 8408,\n",
-       " 8408,\n",
-       " 9097,\n",
-       " 9097,\n",
-       " 9114,\n",
-       " 9114,\n",
-       " 10663,\n",
-       " 10663,\n",
-       " 10755]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 12, 20, 23, 35, 46, 85, 98, 153, 206, 206, 238, 315, 328, 359, 519, 519, 10820, 11701, 12272, 12672, 12777, 12777, 13009, 13560, 14280, 14712, 15392, 15437, 17760, 18488, 20309, 558, 558, 558, 558, 647, 660, 1428, 1428, 1539, 1539, 1619, 1619, 2145, 2145, 2257, 2931, 3724, 3724, 3724, 4211, 4215, 4345, 4561, 5254, 5254, 6221, 6240, 6280, 7111, 8004, 8132, 8132, 8408, 8408, 9097, 9097, 9114, 9114, 10663, 10663, 10755]\n"
+     ]
     }
    ],
    "source": [
-    "lista_numeros"
+    "print(lista_numeros)"
    ]
   },
   {
@@ -274,16 +197,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "30000"
+       "20000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +226,7 @@
        "20309"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,14 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La mediana es: 5695.520547945205\n"
+      "La mediana es: 4211\n"
      ]
     }
    ],
@@ -350,6 +273,13 @@
    "source": [
     "![imagen](https://upload.wikimedia.org/wikipedia/commons/2/25/Telefonica_Logo.svg)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -368,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
