--- a/Bloque 1/Sesion 4/Ejercicios/Ejercicio Final/exe_final_recopilatorio.ipynb
+++ b/Bloque 1/Sesion 4/Ejercicios/Ejercicio Final/exe_final_recopilatorio.ipynb
@@ -12,14 +12,14 @@
    "metadata": {},
    "source": [
     "<!--Crea una celda de tipo markdown de segundo nivel que se llame funciones y librerías-->\n",
-    "Haz doble click aquí para ver las instrucciones!!!"
+    "Haz doble click aquí para ver las instrucciones!!! -- Double click here to see the instructions !!!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<!--Crea una celda de tipo markdown con comentarios sobre este ejercicio-->Haz doble click aquí para ver las instrucciones"
+    "<!--Crea una celda de tipo markdown con comentarios sobre este ejercicio-->Haz doble click aquí para ver las instrucciones -- Double click here to see the instructions !!!"
    ]
   },
   {
@@ -34,12 +34,12 @@
    "metadata": {},
    "source": [
     "<!--Crea una celda de tipo markdown añadiendo descripción de las librerías-->\n",
-    "Haz doble click aquí para ver las instrucciones"
+    "Haz doble click aquí para ver las instrucciones -- Double click here to see the instructions !!!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A continuación crea una función realice el cálculo de la ecuación que aparece abajo:"
+    "A continuación crea una función realice el cálculo de la ecuación que aparece abajo: <br/>\n",
+    "Then create a function perform the calculation of the equation that appears below:"
    ]
   },
   {
@@ -83,16 +84,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SEM = Error estándar de la media <br/>\n",
-    "SD = Desviación estándar <br/>\n",
-    "n = tamaño de la muestra <br/>"
+    "SEM = Error estándar de la media -- Standard error of the mean<br/>\n",
+    "SD = Desviación estándar -- Standard deviation<br/>\n",
+    "n = tamaño de la muestra -- Sample size<br/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<!--Crea una celda de tipo markdown añadiendo una descripción de las funciones-->Haz doble click aquí para ver las instrucciones"
+    "<!--Crea una celda de tipo markdown añadiendo una descripción de las funciones-->Haz doble click aquí para ver las instrucciones -- Double click here to see the instructions !!!"
    ]
   },
   {
@@ -115,12 +116,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Definimos el valor de nuestra variable inicial"
+    "Definimos el valor de nuestra variable inicial -- We define the value of our initial variable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,19 +133,19 @@
    "metadata": {},
    "source": [
     "<!-- Crea una celda de tipo markdown de segundo nivel que se llame: \"Abrimos nuestro fichero de texto\"-->\n",
-    "Haz doble click aquí para ver las instrucciones"
+    "Haz doble click aquí para ver las instrucciones -- Double click here to see the instructions !!!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vemos que archivos tenemos en nuestra carpeta de trabajo"
+    "Vemos que archivos tenemos en nuestra carpeta de trabajo -- We see what files we have in our working folder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -153,15 +154,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0m\u001b[01;34mcondiconales_bucles\u001b[0m/                 otros_operadores_ejercicio.py\r\n",
-      "ejercicio_1.py                       otros_operadores.py\r\n",
-      "ejercicio_2.py                       prueba.ipynb\r\n",
-      "\u001b[01;34mList\u001b[0m/                                README.md\r\n",
-      "lista_numeros.txt                    \u001b[01;34msesion_3\u001b[0m/\r\n",
-      "list_exercise.py                     \u001b[01;34msesion_4\u001b[0m/\r\n",
-      "list.py                              Variables_and_Types_Exercise.py\r\n",
-      "operadores_aritmeticos_ejercicio.py  Variables_and_Types.py\r\n",
-      "operators_aritmeticos.py\r\n"
+      "lista_numeros.txt\r\n"
      ]
     }
    ],
@@ -173,12 +166,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Creamos una lista vacia"
+    "Creamos una lista vacia -- We create an empty list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,12 +182,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cargamos el archivo que me interesa"
+    "Cargamos el archivo que nos interesa -- We load the file that interests us"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,124 +208,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualizamos los datos"
+    "Visualizamos los datos -- View of data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[5,\n",
-       " 12,\n",
-       " 20,\n",
-       " 23,\n",
-       " 35,\n",
-       " 46,\n",
-       " 85,\n",
-       " 98,\n",
-       " 153,\n",
-       " 206,\n",
-       " 206,\n",
-       " 238,\n",
-       " 315,\n",
-       " 328,\n",
-       " 359,\n",
-       " 519,\n",
-       " 519,\n",
-       " 10820,\n",
-       " 11701,\n",
-       " 12272,\n",
-       " 12672,\n",
-       " 12777,\n",
-       " 12777,\n",
-       " 13009,\n",
-       " 13560,\n",
-       " 14280,\n",
-       " 14712,\n",
-       " 15392,\n",
-       " 15437,\n",
-       " 17760,\n",
-       " 18488,\n",
-       " 20309,\n",
-       " 558,\n",
-       " 558,\n",
-       " 558,\n",
-       " 558,\n",
-       " 647,\n",
-       " 660,\n",
-       " 1428,\n",
-       " 1428,\n",
-       " 1539,\n",
-       " 1539,\n",
-       " 1619,\n",
-       " 1619,\n",
-       " 2145,\n",
-       " 2145,\n",
-       " 2257,\n",
-       " 2931,\n",
-       " 3724,\n",
-       " 3724,\n",
-       " 3724,\n",
-       " 4211,\n",
-       " 4215,\n",
-       " 4345,\n",
-       " 4561,\n",
-       " 5254,\n",
-       " 5254,\n",
-       " 6221,\n",
-       " 6240,\n",
-       " 6280,\n",
-       " 7111,\n",
-       " 8004,\n",
-       " 8132,\n",
-       " 8132,\n",
-       " 8408,\n",
-       " 8408,\n",
-       " 9097,\n",
-       " 9097,\n",
-       " 9114,\n",
-       " 9114,\n",
-       " 10663,\n",
-       " 10663,\n",
-       " 10755]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lista_numeros"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#llama aqui a la funcion que creaste arriba y asigna su valor a esta variable\n",
-    "resultado_estandar_media = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La media es: 1781831\n"
+      "[5, 12, 20, 23, 35, 46, 85, 98, 153, 206, 206, 238, 315, 328, 359, 519, 519, 10820, 11701, 12272, 12672, 12777, 12777, 13009, 13560, 14280, 14712, 15392, 15437, 17760, 18488, 20309, 558, 558, 558, 558, 647, 660, 1428, 1428, 1539, 1539, 1619, 1619, 2145, 2145, 2257, 2931, 3724, 3724, 3724, 4211, 4215, 4345, 4561, 5254, 5254, 6221, 6240, 6280, 7111, 8004, 8132, 8132, 8408, 8408, 9097, 9097, 9114, 9114, 10663, 10663, 10755]\n"
      ]
     }
    ],
+   "source": [
+    "print(lista_numeros)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#llama aqui a la funcion que creaste arriba y asigna su valor a esta variable\n",
+    "#call here the function you created above and assign its value to this variable\n",
+    "resultado_estandar_media = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "if lista_numeros != []:\n",
     "    if resultado_estandar_media > valor_maximo_control:\n",
@@ -344,6 +255,13 @@
     "else:\n",
     "    print(\"Nuestra lista de númeroes esta vacia\")    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -362,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
