--- a/Bloque 1/Sesion 4/Ejemplos/Jupyter/ej10_final.ipynb
+++ b/Bloque 1/Sesion 4/Ejemplos/Jupyter/ej10_final.ipynb
@@ -11,14 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.- Funciones y librerías"
+    "## 1.- Funciones y módulos"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.1.- Importamos librerías "
+    "## 1.1.- Importamos módulos "
    ]
   },
   {
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Definimos el valor de nuestra variable inicial"
+    "Definimos el valor de nuestra variable de control -- We define the value of our control variable"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vemos que archivos tenemos en nuestra carpeta de trabajo"
+    "Vemos que archivos tenemos en nuestra carpeta de trabajo -- We see what files we have in our working folder"
    ]
   },
   {
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Creamos una lista vacia"
+    "Creamos una lista vacia -- We create an empty list"
    ]
   },
   {
@@ -142,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cargamos el archivo que me interesa"
+    "Cargamos el archivo que me interesa -- We load the file that interests me"
    ]
   },
   {
@@ -168,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualizamos los datos"
+    "Visualizamos los datos -- View of data"
    ]
   },
   {
@@ -192,7 +192,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si no hay ningún valor mayor que *\"valor_maximo_control\"* calculamos la media en caso contrario calculamos la mediana"
+    "Si no hay ningún valor mayor que *\"valor_maximo_control\"* calculamos la media en caso contrario calculamos la mediana<br/>\n",
+    "If there is no value greater than * \"valor_maximo_control\" * we calculate the mean, otherwise we calculate the median"
    ]
   },
   {
