--- a/Bloque 1/Examen/notebook_funcion.ipynb
+++ b/Bloque 1/Examen/notebook_funcion.ipynb
@@ -4,60 +4,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ejercicio examen"
+    "# Ejercicio examen - Exam exercise"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Importamos librerías"
+    "## 1. Importamos librerías - Import libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
-    "import statistics\n",
     "import math"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bucle_condicional.py  ejercicio_note_funcion_resuelto.ipynb  Palabras.ipynb\r\n",
-      "Calculadora.py        notebook_funcion.ipynb\r\n",
-      "Cesar.ipynb           \u001b[0m\u001b[01;34motros\u001b[0m/\r\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "ls"
+    "## 2. Definimos nuestras funciones - We define our functions"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Definimos nuestras funciones "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Realiza el siguiente cálculo: media de la lista de números, dividivo entre el valor máximo de la lista"
+    "Realiza el siguiente cálculo: media de la lista de números, dividivo entre el valor moda de la lista\n",
+    "Perform the following calculation: mean of the list of numbers, divided by the mode value of the list"
    ]
   },
   {
@@ -71,35 +50,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "y = variable de salida <br/>\n",
-    "median = mediana de la muestra <br/>\n",
-    "max = valor máximo de la muestra <br/>"
+    "y = variable de salida - output variable <br/>\n",
+    "median = mediana de la muestra - median of the sample <br/>\n",
+    "mode = moda de la muestra - mode of the sample <br/>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Define aqui la función"
+    "#Define aqui la función\n",
+    "#Define the function here"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Cargamos los datos "
+    "## 3. Cargamos los datos - We load the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "lista_numeros = []\n",
-    "with open('./otros/lista_numeros.txt') as csv_file:\n",
+    "with open('./lista_numeros.txt') as csv_file:\n",
     "    csv_reader = csv.reader(csv_file, delimiter='\\n')\n",
     "    for row in csv_reader:\n",
     "        lista_numeros.append(int(row[0]))"
@@ -109,53 +89,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Realizamos los cálculos "
+    "## 4. Realizamos los cálculos  - We do the calculations"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Asigna el valor resultante a una variable llamada \"y\""
+    "Asigna el valor resultante a una variable llamada \"y\"\n",
+    "Assign the resulting value to a variable named \"y\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y ="
+    "y = funcion(lista_numeros)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Resultado"
+    "## 5. Resultado - Result"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**NO TOCAR ESTE APARTADO DEL CÓDIGO, SIMPLEMENTE COPIAR EL RESULTADO DEL PRINT**"
+    "**NO TOCAR ESTE APARTADO DEL CÓDIGO, SIMPLEMENTE COPIAR EL RESULTADO DEL PRINT**\n",
+    "**DO NOT TOUCH THIS SECTION OF THE CODE, JUST COPY THE RESULT OF THE PRINT**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El resultado es:"
+    "El resultado es:\n",
+    "The result is:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Pega este resultado en forms hasta el tercer decimal, milésimas, sin redondear: \" + str(math.ldexp(y, 1)))"
+    "print(\"Pega este resultado en el Forms hasta el tercer decimal, milésimas, sin redondear: \\n\" + \"Paste this result into the Forms to the third decimal place, thousandths, without rounding: \\n\" + str(math.ldexp(y, 1)))"
    ]
   }
  ],
