--- a/Bloque 1/Examen/Palabras.ipynb
+++ b/Bloque 1/Examen/Palabras.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "# Pregunta 9 \n",
     "\n",
-    "#### En este ejercicio debes usar un módulo que nunca hemos usado, entenderlo, y utilizar 2 funciones del mismo que te ayudarán a  listar las tres palabras que más aparecen en una lista. Tienes que conseguir que al llamar a estas funciones el resultado de la misma tenga un formato similar a\n",
-    "#### In this exercise you must use a module that we have never used, understand it, and use 2 functions of it that will help you to list the three words that appear the most in a list. You have to ensure that when calling these functions the result of the same has a format similar to\n",
+    "#### En este ejercicio debes usar un módulo que nunca hemos usado, entenderlo, y utilizar 2 funciones del mismo que te ayudarán a  listar las cuatro palabras que más aparecen en una lista. Tienes que conseguir que al llamar a estas funciones el resultado de la misma tenga un formato similar a\n",
+    "#### In this exercise you must use a module that we have never used, understand it, and use 2 functions of it that will help you to list the four words that appear the most in a list. You have to ensure that when calling these functions the result of the same has a format similar to\n",
     "[('PEDRO', 24), ('JUAN', 14), ('PACO', 5), ('LUIS', 2)]\n",
     "#### No es dificil si lees detenidamente la documentación de este módulo.\n",
     "### Disfruta del ejercicio!!!!\n",
